# robotis_op_common

./: readme.md
robotis_op_description/: CMakeLists.txt  model.config  package.xml  rviz_config.rviz
robotis_op_description/launch/: darwin_rviz.launch  darwin_rviz_only.launch  darwin_test.launch  param.launch  robotis_op2_rviz.launch
robotis_op_description/robots/: robotis_op.urdf.xacro  robotis_op.urdf.xacro.xml  test.urdf
robotis_op_description/urdf/: constants.xacro  darwin.urdf  darwin.urdf~  helper_macros.urdf.xacro.xml  materials.xacro  robotis_op.urdf  robotis_op2.gv  robotis_op2.xacro  robotis_op_mesh_collision_geoms.urdf.xacro.xml  robotis_op_primitive_collision_geoms.urdf.xacro.xml  robotis_op_simple_mesh_visual_geoms.urdf.xacro.xml
robotis_op_description/urdf/arm/: robotis_op_arm.urdf.xacro  robotis_op_arm_primitive_collision_geoms.urdf.xacro.xml  robotis_op_arm_realistic_inertia.urdf.xacro  robotis_op_arm_simple_mesh_collision_geoms.urdf.xacro.xml  robotis_op_arm_simple_mesh_visual_geoms.urdf.xacro.xml
robotis_op_description/urdf/head/: robotis_op_head.urdf.xacro.xml  robotis_op_head_primitive_collision_geoms.urdf.xacro.xml  robotis_op_head_simple_mesh_collision_geoms.urdf.xacro.xml  robotis_op_head_simple_mesh_visual_geoms.urdf.xacro.xml
robotis_op_description/urdf/leg/: robotis_op_leg.urdf.xacro.xml  robotis_op_leg_primitive_collision_geoms.urdf.xacro.xml  robotis_op_leg_realistic_inertia.urdf.xacro.xml  robotis_op_leg_simple_mesh_collision_geoms.urdf.xacro.xml  robotis_op_leg_simple_mesh_visual_geoms.urdf.xacro.xml
robotis_op_description/urdf/old/: robotis_op2.gv  robotis_op2.xacro  robotis_op2_with_macros.xacro
(+5 files in other folders)
