<?xml version="1.0"?>
<package>
  <name>robotis_op_description</name>
  <version>1.1.0</version>
  <description>Describes ROBOTIS OP robot model with camera plugin and accelerometer plugin (hector) for RViz and Gazebo</description>
  
  <maintainer email="inna@robotis.com">Inna Tlisov (ROBOTIS)</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/robotis_darwin_description</url>
  <url type="git">https://github.com/ROBOTIS-OP/robotis_op_common</url>

  <author email="tk375@drexel.edu">Taegoo Kim, Bharadwaj Ramesh</author>
  <author email="pc@humarobotics.com">Philippe Capdepuy</author>
  <author email="kevin.daun@freenet.de">Kevin Daun</author>
  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
